<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.matc.lasertagpro.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtMainTitle"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtBxDecrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radbtnGame"/>

    <Button
        android:id="@+id/btnGame"
        android:layout_width="237dp"
        android:layout_height="182dp"
        android:layout_marginBottom="89dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="Play Game"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RadioGroup
        android:id="@+id/radbtnGame"
        android:layout_width="397dp"
        android:layout_height="175dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <RadioButton
            android:id="@+id/btnBomb"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/btnBomb"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="414dp"
            tools:layout_editor_absoluteY="139dp"/>

        <RadioButton
            android:id="@+id/btnCapture"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCapture"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="221dp"/>

        <RadioButton
            android:id="@+id/btnMainframe"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/btnMainframe"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="368dp"
            tools:layout_editor_absoluteY="235dp"/>

    </RadioGroup>

</android.support.constraint.ConstraintLayout>
